# llm-datagen

./: .gitignore  DEVELOPMENT.md  README.md  __init__.py  pyproject.toml  setup.py
docs/: DETAIL.md  DEVELOPER_GUIDE.md  QUESTION.md  USER_GUIDE.md
example/: __init__.py  architecture_demo.py
llm_datagen/: __init__.py
llm_datagen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
llm_datagen/connectors/: __init__.py
llm_datagen/connectors/sinks/: __init__.py  task_jsonl_sink.py
llm_datagen/connectors/sources/: __init__.py  asset_source.py
llm_datagen/core/: __init__.py  bus.py  capabilities.py  channel.py  config.py  exceptions.py  hooks.py  llm.py  node.py  operators.py  pipeline.py  protocols.py  runtime.py  storage.py
llm_datagen/impl/: __init__.py  node.py  pipeline.py
llm_datagen/impl/bus/: __init__.py  bus.py  stream_bridge.py
llm_datagen/impl/channel/: threading_channel.py
llm_datagen/impl/storage/: csv_storage.py  jsonl_storage.py  memory_storage.py
llm_datagen/llm/: __init__.py  client.py  factory.py  model_pool.py
llm_datagen/operators/: __init__.py  llm_operator.py
llm_datagen/prompts/: __init__.py  manager.py
llm_datagen/util/: __init__.py
