[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-datagen"
version = "1.0.0"
description = "极简高性能流式数据加工库"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "llm-datagen Team"}
]
keywords = ["data processing", "pipeline", "llm", "streaming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.setuptools]
packages = ["llm_datagen", "llm_datagen.core", "llm_datagen.impl", "llm_datagen.llm", "llm_datagen.operators", "llm_datagen.connectors", "llm_datagen.prompts", "llm_datagen.util"]

[tool.setuptools.package-data]
llm_datagen = ["README.md", "DEVELOPMENT.md"]
